test/testdata/syntax_errors/invalid_utf8_string.lox
// noformat
print "invalid utf8 character -> ÿ <-"; // error: invalid UTF-8 byte 0xff
